fix scrollbars horizontally and on main dashboard

--- a/public/index-src/scrollbars.css
+++ b/public/index-src/scrollbars.css
@@ -1,6 +1,7 @@
 /* width */
 ::-webkit-scrollbar {
     width: 3px;
+    height: 3px;
     padding: 0;
     margin: 0;
 }
